# PEngine

./: .gitignore  Cargo.toml  LICENSE.md  PEngine.sln  README.md  scratch.sh
.github/workflows/: build.yml  codecov.yml
DevEnv/: docker-compose.yml
PEngine/: App.razor  Dockerfile  PEngine.csproj  PEngine.sln  Program.cs  UIState.cs  _Imports.razor
PEngine.Common/: CommentServiceResponse.cs  IPEngineModel.cs  PEngine.Common.csproj  PostServiceResponse.cs  ServiceResponse.cs  UserServiceResponse.cs  ValidationState.cs
PEngine.Common/DataModels/: Attachment.cs  Comment.cs  Post.cs  User.cs  UserCredentials.cs
PEngine.Common/Misc/: ControlledObject.cs  IControlledObject.cs  Permission.cs
PEngine.Common/RequestModels/: LoginRequest.cs  UserRegisterRequest.cs
PEngine.Common/Utilities/: Cryptography.cs  Hash.cs
PEngine.NUnit/: CryptoTest.cs  PEngine.NUnit.csproj  UnitTest1.cs
PEngine.NewFront/: package-lock.json  package.json
PEngine.Schema/: tables.sql
PEngine.Schema/functions/: FUNC_Directory_Create.sql  FUNC_EntryPath_Lookup.sql  FUNC_EntryPath_StrToChain.sql  FUNC_Entry_Create.sql  FUNC_Post_Create.sql  FUNC_User_Create.sql
PEngine.Schema/procedures/: PROC_User_Create.sql
PEngine.Schema/views/: VIEW_EntryLookup.sql
PEngine/Attributes/: ExplorerViewColumnAttribute.cs
PEngine/ComponentModels/: IExplorerItem.cs  PostListItem.cs
PEngine/Data/: WeatherForecast.cs  WeatherForecastService.cs
PEngine/Exceptions/: PEngineException.cs
src/: main.rs  routes.rs
templates/: index.html  layout.html  post_edit.html
wwwroot/: style.css
(+192 files in other folders)
