[package]
name = "pengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
regex = "1.9.0"
sqlx = { version = "0.7.0",  features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
tokio = { version = "1", features = ["full"] }
